# swb_website

./: db.sqlite3  manage.py  pyproject.toml
landing_page/: urls.py  views.py
landing_page/static/: styles.css
landing_page/templates/landing_page/: home.html
swb_website/: asgi.py  settings.py  urls.py  wsgi.py
