[tool.poetry]
name = "swb-website"
version = "0.1.0"
description = ""
authors = ["joshws <josh@envisageworldwide.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-bootstrap-v5 = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
